# PRML

./: .gitignore  README.md  architecture.md  pca_weights.npz  prml_project_final_v1.ipynb  pyproject.toml  requirements.txt  resunet.pt  setup.sh
scripts/: denoise_with_pca_weights.py  run_pca.py  run_resunet.py
src/prml_denoise/: __init__.py  config.py  data_io.py  dsp.py
src/prml_denoise/models/: pca_model.py  resunet.py
src/prml_denoise/pipelines/: pca_pipeline.py  resunet_pipeline.py
