[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prml-speech-denoise"
version = "0.1.0"
description = "Speech denoising pipelines from PRML notebooks: PCA and ResUNet"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "kagglehub>=0.3.7",
  "librosa>=0.10.2",
  "soundfile>=0.12.1",
  "pesq>=0.0.4",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "torch>=2.2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
